tests/snapshots/structure__lib__fail__package_bin_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--lib

STDERR:
Error: No library target found.

Targets present in package:
- package_bin_target (--bin package_bin_target)


STDOUT:
