tests/snapshots/structure__lib__fail__virtual_workspace_single_package_bin_target.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--lib

STDERR:
Error: No library target found.

Targets present in package:
- package_bin_target (--bin package_bin_target)


STDOUT:
